--- a/ghostty/config
+++ b/ghostty/config
@@ -19,7 +19,8 @@ adjust-cursor-thickness = 150%
 # Font Family
 font-family = Berkeley Mono
 # font-family-italic = "Cartograph CF"
-font-family = Noto Sans CJK KR
+font-family = Bitstream Vera Sans Mono
+# font-family = Noto Sans CJK KR
 # font-family = Operator Mono Lig
 # font-family = Berkeley Mono Trial Regular
 # font-family = JetBrainsMono Nerd Font Mono
