--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -155,26 +155,26 @@ alt-t = 'workspace T' # for terminal shell
 alt-v = 'workspace V'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#move-node-to-workspace
-alt-shift-1 = ['move-node-to-workspace 1', 'workspace 1']
-alt-shift-2 = ['move-node-to-workspace 2', 'workspace 2']
-alt-shift-3 = ['move-node-to-workspace 3', 'workspace 3']
-alt-shift-4 = ['move-node-to-workspace 4', 'workspace 4']
+alt-shift-1 = ['move-node-to-workspace 1', 'workspace 1', 'exec-and-forget /opt/homebrew/bin/sketchybar --trigger space_windows_change FOCUSED_WORKSPACE=$AEROSPACE_FOCUSED_WORKSPACE',]
+alt-shift-2 = ['move-node-to-workspace 2', 'workspace 2', 'exec-and-forget /opt/homebrew/bin/sketchybar --trigger space_windows_change FOCUSED_WORKSPACE=$AEROSPACE_FOCUSED_WORKSPACE',]
+alt-shift-3 = ['move-node-to-workspace 3', 'workspace 3', 'exec-and-forget /opt/homebrew/bin/sketchybar --trigger space_windows_change FOCUSED_WORKSPACE=$AEROSPACE_FOCUSED_WORKSPACE',]
+alt-shift-4 = ['move-node-to-workspace 4', 'workspace 4', 'exec-and-forget /opt/homebrew/bin/sketchybar --trigger space_windows_change FOCUSED_WORKSPACE=$AEROSPACE_FOCUSED_WORKSPACE',]
 # alt-shift-5 = ['move-node-to-workspace 5', 'workspace 5']
 # alt-shift-6 = ['move-node-to-workspace 6', 'workspace 6']
 # alt-shift-7 = ['move-node-to-workspace 7', 'workspace 7']
-alt-shift-8 = ['move-node-to-workspace 8', 'workspace 8']
-alt-shift-9 = ['move-node-to-workspace 9', 'workspace 9']
-alt-shift-b = ['move-node-to-workspace B', 'workspace B']
-alt-shift-c = ['move-node-to-workspace C', 'workspace C']
+alt-shift-8 = ['move-node-to-workspace 8', 'workspace 8', 'exec-and-forget /opt/homebrew/bin/sketchybar --trigger space_windows_change FOCUSED_WORKSPACE=$AEROSPACE_FOCUSED_WORKSPACE',]
+alt-shift-9 = ['move-node-to-workspace 9', 'workspace 9', 'exec-and-forget /opt/homebrew/bin/sketchybar --trigger space_windows_change FOCUSED_WORKSPACE=$AEROSPACE_FOCUSED_WORKSPACE',]
+alt-shift-b = ['move-node-to-workspace B', 'workspace B', 'exec-and-forget /opt/homebrew/bin/sketchybar --trigger space_windows_change FOCUSED_WORKSPACE=$AEROSPACE_FOCUSED_WORKSPACE']
+alt-shift-c = ['move-node-to-workspace C', 'workspace C', 'exec-and-forget /opt/homebrew/bin/sketchybar --trigger space_windows_change FOCUSED_WORKSPACE=$AEROSPACE_FOCUSED_WORKSPACE']
 # alt-shift-e = ['move-node-to-workspace E', 'workspace E']
 # alt-shift-f = ['move-node-to-workspace F', 'workspace F']
-alt-shift-m = ['move-node-to-workspace M', 'workspace M']
-alt-shift-n = ['move-node-to-workspace N', 'workspace N']
-alt-shift-o = ['move-node-to-workspace O', 'workspace O']
+alt-shift-m = ['move-node-to-workspace M', 'workspace M', 'exec-and-forget /opt/homebrew/bin/sketchybar --trigger space_windows_change FOCUSED_WORKSPACE=$AEROSPACE_FOCUSED_WORKSPACE']
+alt-shift-n = ['move-node-to-workspace N', 'workspace N', 'exec-and-forget /opt/homebrew/bin/sketchybar --trigger space_windows_change FOCUSED_WORKSPACE=$AEROSPACE_FOCUSED_WORKSPACE']
+alt-shift-o = ['move-node-to-workspace O', 'workspace O', 'exec-and-forget /opt/homebrew/bin/sketchybar --trigger space_windows_change FOCUSED_WORKSPACE=$AEROSPACE_FOCUSED_WORKSPACE']
 # alt-shift-p = ['move-node-to-workspace P', 'workspace P']
-alt-shift-s = ['move-node-to-workspace S', 'workspace S']
-alt-shift-t = ['move-node-to-workspace T', 'workspace T']
-alt-shift-v = ['move-node-to-workspace V', 'workspace V']
+alt-shift-s = ['move-node-to-workspace S', 'workspace S', 'exec-and-forget /opt/homebrew/bin/sketchybar --trigger space_windows_change FOCUSED_WORKSPACE=$AEROSPACE_FOCUSED_WORKSPACE']
+alt-shift-t = ['move-node-to-workspace T', 'workspace T', 'exec-and-forget /opt/homebrew/bin/sketchybar --trigger space_windows_change FOCUSED_WORKSPACE=$AEROSPACE_FOCUSED_WORKSPACE']
+alt-shift-v = ['move-node-to-workspace V', 'workspace V', 'exec-and-forget /opt/homebrew/bin/sketchybar --trigger space_windows_change FOCUSED_WORKSPACE=$AEROSPACE_FOCUSED_WORKSPACE']
 # alt-shift-v = ['move-node-to-workspace V', 'workspace V']
 
 # exec-and-forget aerospace move-node-to-workspace --focus-follows-window 9 && sketchybar --trigger space_windows_change
