--- a/ghostty/config
+++ b/ghostty/config
@@ -56,6 +56,7 @@ confirm-close-surface = false
 keybind = cmd+shift+space=toggle_quick_terminal
 # keybind = ctrl+z=close_surface
 # keybind = ctrl+l=new_split:right
+keybind = alt+shift+w=toggle_command_palette
 
 # Always show ghostty as the title
 title = ghostty
